# optisearch

./: CMakeLists.txt  README.md
res/: complicated.txt  easy.txt  invalidsize.txt  solved.txt  unsolvable.txt
res/solution/: 01.txt
src/: astar.hpp  astar.tpp  board.cpp  board.hpp  heap.hpp  heap.tpp  main.cpp  maze.cpp  maze.hpp  search.cpp  search.hpp  searchable.hpp  searchable.tpp  test.cpp  testsetup.cpp
test/: board.cpp  heap.cpp  main.cpp
